# ai-dev-kit

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DECOMMISSION_PLAN.md  PLAN_UC_FGAC_SKILLS.md  README.md  SECURITY.md  SKILLS_MANIFEST.md  app.yaml  databricks.yml  databricks_connect_demo.ipynb  india_sts_top3_mar2026.html  install.ps1  install.py  install.sh  install_genie_code_skills.py  japan_top3_customers.html  pyproject.toml  requirements.txt  ruff.toml  test_mcp_live.py
.claude-plugin/: DEPRECATED.md  check_update.sh  marketplace.json  plugin.json  setup.sh
.github/pages/: mkdocs.yml
.github/scripts/: validate_imports.py  validate_mcp_tools.py  validate_skills.py
.github/workflows/: ci.yml  noom-mcp-server.yml  release.yml  sync-skills-from-das.yml  sync-upstream.yml
.ipynb_checkpoints/: databricks_connect_demo-checkpoint.ipynb
.skill-authoring/: SKILL.md  install_skill_authoring.sh
.test/: CUSTOMIZATION_GUIDE.md  README.md  SKILL.md  TECHNICAL.md  pyproject.toml
.test/notebooks/: gepa_skill_optimization_demo.ipynb
.test/scripts/: add_example.py  generate_examples.py  generate_ground_truth.py  optimize.py  quick_trigger.py  run_app_eval.py  trace_to_examples.py
.test/tests/: test_optimize_e2e.py  test_scorers.py
DEPRECATED-databricks-skills/: README.md  install_skills.sh
ai-dev-project/: .mcp.json  CLAUDE.md  README.md  cleanup.sh  setup.sh
ai-dev-project/.cursor/: mcp.json
banking-fraud-analytics/: DEMO.md  TASKS.md  databricks.yml  fraud_scoring_agent.py  generate_fraud_data.py  main.py  pyproject.toml  streaming_pipeline.py
banking-fraud-analytics/live_fraud_queue/: genie.py
banking-fraud-analytics/live_fraud_queue/assets/: custom.css
banking-fraud-analytics/live_fraud_queue/static/: index.html
cli/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cli/cmd/: cmd_test.go  doctor.go  install.go  launch.go  launch_builder.go  launch_starter.go  launch_test.go  root.go  status.go  uninstall.go  update.go
cli/detect/: profiles.go  profiles_test.go  tools.go  tools_test.go
cli/installer/: config.go  config_test.go  deps.go  deps_test.go  mcp.go  mcp_test.go  repo.go  repo_test.go  skills.go  skills_test.go  version.go  version_test.go
cli/releases/: checksums.txt
cli/signal/: signal.go  signal_test.go
cli/ui/: checkbox.go  checkbox_test.go  errors.go  errors_test.go  prompt.go  prompt_test.go  radio.go  radio_test.go  spinner.go  spinner_test.go  styles.go  styles_test.go  summary.go  summary_test.go
databricks-builder-app/: .env.example  .gitignore  EVENT_LOOP_FIX.md  README.md  app.yaml  app.yaml.example  app.yaml_backup  pyproject.toml  requirements.txt
databricks-builder-app/alembic/: env.py
databricks-builder-app/client/: package-lock.json  package.json
databricks-codex/: CODEX_INTEGRATION_PLAN.md  README.md  pyproject.toml
databricks-codex/databricks_codex/: __init__.py  auth.py  config.py  executor.py  mcp_client.py  models.py  session.py
databricks-codex/scripts/: install_codex_skills_and_mcp.sh
databricks-codex/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_executor.py  test_mcp_client.py  test_models.py  test_session.py
databricks-codex/tests/integration/: __init__.py  conftest.py  test_codex_exec.py  test_databricks_assets.py
databricks-mcp-app/: .gitignore  README.md  app.yaml  databricks.yml  deploy.sh  pyproject.toml  requirements.txt
databricks-mcp-app/databricks_mcp_app/: main.py
databricks-mcp-app/examples/: agent_example.py  deploy_agent.py  test_connection.py
databricks-mcp-app/server/: __init__.py  main.py
databricks-mcp-server/: README.md  pyproject.toml  setup.ps1  setup.sh
databricks-skills/: README.md  SYNC.md  install_genie_code_skills.py  install_kiro_skills.py  install_skills.sh  install_skills_to_genie_code.sh
databricks-skills/databricks-data-generation/: .gitignore  README.md  SKILL.md  pyproject.toml
databricks-skills/databricks-data-generation/assets/schemas/: iot_device.json  iot_sensor.json  retail_customer.json
databricks-skills/databricks-data-generation/references/: 2-generation-approaches.md  6-troubleshooting.md  dbldatagen-connect-patterns.md  dbldatagen-guide.md  generator-api.md  polars-generation-guide.md  streaming-patterns.md  troubleshooting.md
databricks-skills/databricks-data-generation/references/industry-patterns/: healthcare.md
databricks-skills/databricks-data-generation/scripts/: generate_synthetic_data.py
databricks-skills/databricks-data-generation/scripts/generators/: financial.py  healthcare.py  iot.py  manufacturing.py  retail.py
databricks-skills/databricks-data-generation/scripts/generators/polars/: cdc.py  financial.py  healthcare.py  iot.py  manufacturing.py  retail.py
databricks-skills/databricks-data-generation/tests/: conftest.py  helpers.py  test_generators.py  test_schemas.py
databricks-tools-core/: README.md  pyproject.toml
databricks_mcp_app/: main.py
noom-mcp-server/: .env.example  DESIGN.md  DEVELOPMENT.md  README.md  conftest.py  pyproject.toml  run.py  run_integration_tests.sh
noom-mcp-server/customization/: auth_guard_patch.py  patches.py  sql_executor_patch.py  sql_timeout_patch.py  tool_allowlist_patch.py
noom-mcp-server/noom_mcp/: __init__.py  auth_guard_patch.py  patches.py  sql_executor_patch.py  version_check.py
noom-mcp-server/tests/: test_auth_guard_patch.py  test_patches.py  test_sql_executor_patch.py  test_sql_timeout_patch.py  test_version_check.py
noom-mcp-server/tests/integration/: conftest.py  test_live_sql.py
resources/: sample_job.job.yml
scripts/: generate_support_tickets.py  test_mcp_live.py
src/: sample_notebook.ipynb
tests/: conftest.py  sample_taxis_test.py
(+653 files in other folders)
