[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-mcp-app"
version = "0.2.0"
description = "Databricks MCP App — streamable HTTP wrapper with on-behalf-of-user OAuth"
requires-python = ">=3.10"
dependencies = [
    "databricks-tools-core",
    "databricks-mcp-server",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["databricks_mcp_app*"]
