[project]
name = "databricks-data-generation"
version = "0.1.0"
description = "Synthetic data generation skill for Databricks"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "polars>=1.0.0",
    "mimesis>=18.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
